src/styles/_library.scss
.library {
  position: fixed;
  top: 0;
  left: 0;
  width: 20rem;
  height: 100%;
  transform: translateX(-100%);
  transition: all 0.3s ease;
  opacity: 0;
  @media screen and (max-width: 780px) {
    width: 100%;
    background: white;
  }

  .library-heading {
    height: 20vh;
    max-height: 7rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
  h2 {
    padding-left: 2rem;
  }
  .close-library {
    padding-right: 2rem;
    cursor: pointer;
  }
  &.active-library {
    transform: translateX(0);
    opacity: unset;
    background: #a7a7a71f;
    @media screen and (max-width: 780px) {
      background: linear-gradient(
        to right bottom,
        black,
        rgb(33, 5, 54),
        rgb(67, 13, 75),
        rgb(33, 5, 54),
        black
      );
    }
  }
  &.isPlaying {
    box-shadow: unset;
    background: unset;
    @media screen and (max-width: 780px) {
      background: linear-gradient(
        to right bottom,
        black,
        rgb(33, 5, 54),
        rgb(67, 13, 75),
        rgb(33, 5, 54),
        black
      );
    }
  }
  .library-songs {
    overflow: scroll;
    height: calc(100vh - 7rem);
  }
}

.library-song {
  display: flex;
  align-items: center;
  padding: 1rem 2rem;
  cursor: pointer;
  img {
    width: 30%;
  }
  @media (hover: hover) {
    &:hover {
      background: rgba(119, 119, 119, 0.11);
    }
  }
  &.selected {
    background: linear-gradient(to right, #0000003d, #9c9c9c42);
  }
  &.is-playing {
    background: linear-gradient(to right, #0000003d, #9c9c9c42);
  }
}

.song-description {
  padding-left: 1rem;
}

* {
  scrollbar-width: thin;
  scrollbar-color: rgba(155, 155, 155, 0.5) transparent;
}

::-webkit-scrollbar {
  width: 5px;
}

::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar-thumb {
  background: rgba(155, 155, 155, 0.5);
  border-radius: 20px;
  border: transparent;
}

